# ng

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  bordel1.sln  bordel1.vcxproj  bordel1.vcxproj.filters  compile-inputs-to-ll.sh  dulezite_poznatky.md  input-debug.ll  input-int-conv.ll  input.cpp  input.dot  input.ll  input2.bc  input2.cpp  input2.ll  regex_cheat_sheet.md  todo.md
Angie/: Angie.vcxproj  Angie.vcxproj.filters
examples/: 01_mincase_01_nullptr_dereference[dead].c  01_mincase_02_non_init_dereference[dead].c  01_mincase_03_normal_dereference[dead].c  01_mincase_04_all_conditional.c  01_mincase_05_all_conditional_with_function_calls.c  01_minimal_case.c
src/: AngieType.cc  Definitions.hh  DummyOperations.hh  DummyState.hh  Exceptions.cc  Exceptions.hh  ForwardNullAnalysis.hh  FrontedValueMapper.hh  FrontendLlvm.cc  FrontendLlvm.hh  General.hh  ICfgNode.hh  IOperation.hh  IState.hh  IdImpl.hh  LlvmFrontend.cc  LlvmFrontend.hh  LlvmGlobals.cc  LlvmGlobals.hh  LlvmType.cc  OperationArgs.hh  Smg.cc  StateStorage.cc  StateStorage.hh  Type.cc  Type.hh  ValueContainerV1.cc  ValueContainerV1.hh  ValueRepImplementation.cc  ValueRepImplementation.hh  Values.cc  Values.hh  ValuesZ3.cc  ValuesZ3.hh  console.cc  enum_flags.h  laboratory.cc  main.cpp  stdafx.cpp  stdafx.h
utils/: header.c  install_boost.sh  install_croaring.sh  install_gsl.sh  install_gtest.sh  install_main.sh  install_range-v3.sh
